# grant-writer-skills

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
examples/horizon_ria_example/: config.yaml
examples/horizon_ria_example/sections/: objectives.md
examples/uefiscdi_pce_example/: config.yaml
examples/uefiscdi_pce_example/sections/: objectives.md
scripts/: install.sh  setup.py
skills/aims/: SKILL.md
skills/budget/: SKILL.md
skills/codex-review/: SKILL.md
skills/compliance/: SKILL.md
skills/fact-check/: SKILL.md
skills/foa-analysis/: SKILL.md
skills/grant-writer/: SKILL.md
skills/import-docs/: SKILL.md
skills/landscape/: SKILL.md
skills/literature/: SKILL.md
skills/preliminary-data/: SKILL.md
skills/proposal/: SKILL.md
skills/resubmission/: SKILL.md
skills/review/: SKILL.md
skills/revision/: SKILL.md
skills/risk-analysis/: SKILL.md
skills/supporting-docs/: SKILL.md
templates/: grant_config.yaml
templates/agencies/erc/: agency.json
templates/agencies/horizon_ia/: agency.json
templates/agencies/horizon_ria/: agency.json  excellence.md  impact.md  implementation.md  project_summary.md
templates/agencies/msca_doctoral/: agency.json
templates/agencies/msca_postdoc/: agency.json
templates/agencies/pnrr/: agency.json
templates/agencies/uefiscdi_pce/: agency.json  expected_results.md  methodology.md  objectives.md  project_summary.md  state_of_the_art.md  work_plan.md
templates/agencies/uefiscdi_pd/: agency.json
templates/agencies/uefiscdi_te/: agency.json
tools/: __init__.py  agency_requirements.py  budget_calculator.py  compliance_checker.py  config.py  funded_grants.py  pdf_reader.py  state_manager.py  verify_setup.py
